# trading_signal

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
base/: Cargo.toml
base/src/: error.rs  lib.rs
base/src/configuration/: environment.rs
base/src/model/: config_model.rs
trad_sig/: Cargo.toml
trad_sig/src/: app.rs  configuration.rs  error.rs  lib.rs  main.rs  model.rs
trad_sig/src/configuration/: setting.rs
trad_sig/src/model/: http_client_model.rs
trad_sig/src/service/: zmq.rs
