[package]
name = "base"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive", "env"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.20", features = ["serde-human-readable", "macros"] }
snafu = "0.8.5"
tokio = { version = "1.20.2", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
thiserror = { version = "1.0", default-features = false }
zmq = "0.10"

